[package]
name = "protocol"
version = "0.1.0"
authors = ["GachiLord <name504172@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
prost = "0.12"
console_error_panic_hook = { version = "0.1.7", optional = true }
prost-types = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"


[build-dependencies]
prost-build = "0.5"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
