[package]
name = "server"
version = "1.0.6"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "stress-test"
path = "src/stress_test/main.rs"


[dependencies]
tower = "*"
tower-http = { version="*", features = ["fs"] }
axum = "0.7.5"
tokio = { version = "1", features = ["signal", "rt-multi-thread", "time", "net"] }
tokio-stream = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"]}
jwt-simple = "0.11"
data-encoding = "2.4"
weak-table = "0.3"
tokio-postgres = { version = "0.7.10", features = ["runtime", "with-serde_json-1", "array-impls"] }
argon2 = "0.5.2"
fast_log = { version = "1.6", features = ["lz4"]}
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
reqwest = { version = "0.12.3", features = ["json"] }
handlebars = "3"
tokio-tungstenite = "*"
lazy_static = "1.4.0"
clap = { version = "4.5.4", features = ["derive"] }
datasize = "0.2.15"
console-subscriber = "0.2.0"
[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

#[[bench]]
#name = "stress-test"
#harness = false
